<resources>
    <string name="app_name">WarriorFit</string>
    <string name="empty"></string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="done">Done</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="exercise_start">Start Exercise</string>
    <string name="exercise_stop">Stop Exercise</string>
    <string name="exercise_next">OK, Next Exercise</string>
    <string name="exercise_log">Show Exercise Log</string>
    <string name="by">by</string>
    <string name="abbr_not_available">N/A</string>
    <string name="switch_text_male">Male</string>
    <string name="switch_text_female">Female</string>
    <string name="switch_text_private">Private</string>
    <string name="switch_text_shareable">Shareable</string>
    <string name="switch_text_metric">Metric</string>
    <string name="switch_text_us_standard">US Standard</string>
    <string name="switch_text_us">US</string>
    <string name="switch_text_date_us">01/15/2013</string>
    <string name="switch_text_date_metric">15/01/2013</string>
    <string name="date_format_us">MM/dd/yyyy</string>
    <string name="date_format_metric">dd/MM/yyyy</string>
    <string name="exercise_enter_time_label">Enter time allowed for this exercise</string>
    <string name="leave_empty">Leave empty if not timed</string>
    <string name="time_elapsed_label">TIME:</string>
    <string name="time_initial_value">00:00:00</string>
    <string name="time_left_label">LEFT:</string>
    <string name="exercise_details_to_enter_notice">You will enter %s upon completion of this exercise</string>
    <string name="weight">weight</string>
    <string name="and">and</string>
    <string name="distance">Distance</string>
    <string name="repetitions">repetitions</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="btn_age_default">Select Age</string>
    <string name="btn_height_default">Select Height</string>
    <string name="btn_weight_default">Select Weight</string>
    <string name="btn_waist_default">Select Waist</string>
    <string name="btn_current_body_fat_default">Current body fat</string>
    <string name="btn_desired_body_fat_default">Desired body fat</string>
    <string name="btn_refresh">Refresh</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="unit_kg">kg</string>
    <string name="unit_pounds">lbs</string>
    <string name="unit_km">km</string>
    <string name="unit_mile">mi</string>
    <string name="unit_meters">m</string>
    <string name="unit_cm">cm</string>
    <string name="unit_feets">ft</string>
    <string name="unit_inches">in</string>
    <string name="unit_age">years</string>
    <string name="unit_percentage">%</string>
    <string name="unit_speed_km_hr">km/hr</string>
    <string name="unit_speed_miles_hr">mi/hr</string>
    <string name="unit_pace_minute_per_mile">min/mile</string>
    <string name="unit_pace_minute_per_km">min/km</string>
    <string name="user_profile_validate_input_notice">Display name, weight, height should not be empty</string>
    <string name="save_exercise_history_notice">Should I include this exercise in the history?</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google_plus">Google+</string>
    <string name="user_profile_local">Local</string>
    <string name="exercise_history_record_reps">REPETITION</string>
    <string name="exercise_history_record_time_of_day">TIME OF DAY</string>
    <string name="exercise_history_record_weight">WEIGHT</string>
    <string name="exercise_history_record_distance">DISTANCE</string>
    <string name="exercise_history_record_time">TIME</string>
    <string name="exercise_history_header_empty">You have not completed any sets yet.</string>
    <string name="exercise_history_header_text_today">Sets completed today:</string>
    <string name="login_screen_title">Login via Social Network</string>
    <string name="login_screen_subtitle">Login with social network is optional, however in the future it will allow you to connect with friends who use this application. \nYour exercises will be added to statistics anonymously to improve this app, however non of your identification data will be collected.</string>
    <string name="login">Login</string>
    <string name="login_view_text">You are logged in using %1$s</string>
    <string name="login_succcessful_notice">You have successfully logged in via %1$s.</string>
    <string name="profile_screen_title">My Prfofile</string>
    <string name="info_screen_title">Info</string>
    <string name="goals_screen_title">My Goals</string>
    <string name="forum_screen_title">Forum</string>
    <string name="program_details_screen_title">PROGRAM</string>
    <string name="exercise_details_screen_title">EXERCISE</string>
    <string name="txt_units_of_measurements_capitalized">UNITS OF MEASUREMENTS</string>
    <string name="txt_date_format_capitalized">DATE FORMAT</string>
    <string name="txt_date_format">Date format</string>
    <string name="txt_units_sample_us">ex. 140.5 lbs</string>
    <string name="txt_units_sample_metric">ex. 64.5 kg</string>
    <string name="txt_refresh_app">Refresh the application to see if there are any new programs or exercises</string>
    <string name="progress_update_app">Updating…</string>
    <string name="progress_sign_in">Signing in…</string>
    <string name="progress_upload_photo">Uploading photo…</string>
    <string name="body_fat_input_popup_title">Enter Boday Fat</string>
    <string name="age_input_popup_title">Enter Age</string>
    <string name="weight_input_popup_title">Enter weight</string>
    <string name="date_input_popup_title">Select date</string>
    <string name="measurement_input_popup_title">Enter measurement</string>
    <string name="time_input_popup_title">Enter time</string>
    <string name="height_input_popup_title">Enter height</string>
    <string name="repetitions_input_popup_title">Enter repetitions</string>
    <string name="distance_input_popup_title">Enter distance</string>
    <string name="waist_input_popup_title">Enter waist</string>
    <string name="measurement_types_activity_title">Measurements</string>
    <string name="info_activity_title">Info</string>
    <string name="goals_activity_title">Goals</string>
    <string name="photo_comparison_activity_title">Photo Comparison</string>
    <string name="schedule_activity_title">Schedule</string>
    <string name="exercise_history_activity_title">Exercise History</string>
    <string name="invite_person_activity_title">Invite a person</string>
    <string name="permissions_activity_title">%1$s is able to…</string>
    <string name="measurements_history_header_empty">You have not entered any measurements yet. Use&#160;&#160;&#160;to add new measurements.</string>
    <string name="schedule_header_empty">%1$s currently %2$s not have a schedule.</string>
    <string name="schedule_subheader_empty">By using the&#160;&#160;&#160;icon you will be able to set a date and time for when you would like to workout.</string>
    <string name="date_btn_title">Date</string>
    <string name="measurement_btn_title">Measurement</string>
    <string name="tab_people">People</string>
    <string name="tab_exercises">Exercises</string>
    <string name="tab_programs">Programs</string>
    <string name="tab_info">More info</string>
    <string name="btn_feedback">Email us!</string>
    <string name="btn_share_this_app">Share WarriorFit app</string>
    <string name="btn_rate_this_app">Rate WarriorFit app</string>
    <string name="btn_replay_tutorial">Tutorial</string>
    <string name="btn_blog">Our Facebook page</string>
    <string name="info_text"><b>CyberWalkAbout.com</b> is a mobile app development company specializing in state-of-the-art user experience design for <b>Android</b> and <b>Apple iOS mobile devices</b>. Currently serving clients in Chicago and Seattle.\n\n<b>To sign up the best trainers we need more users like you, please rate and share this app.</b>\n\n<b>Your email feedback will be appreciated.</b></string>
    <string name="market_app_not_found_notice">Couldn\'t launch google play app</string>
    <string name="share_app_chooser_popup_title">Share via</string>
    <string name="email_chooser_popup_title">Send via</string>
    <string name="feedback_email_subject">Feedback for WarriorFit app - Android v.%1$s</string>
    <string name="schedules_email_subject">Schedules</string>
    <string name="share_this_app_message">I would like to share with you #WarriorFitApp.com video-based fitness app http://WarriorFitApp.com</string>
    <string name="share_running_summary_message">I completed %1$s in %2$s.  Shared via #WarriorFitApp.com</string>
    <string name="share_training_program_message">I use #WarriorFitApp.com app exercise program \"%1$s\" by %2$s http://WarriorFitApp.com</string>
    <string name="share_exercise_history_message">I worked out with #WarriorFitApp.com app:\n%1$shttp://bit.ly/CyberFit</string>
    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="day_of_week_short">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string name="pace">Pace</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="altitude_title">ALTITUDE (%1$s):</string>
    <string name="altitude_top">Top:</string>
    <string name="altitude_avg">Avg:</string>
    <string name="speed_title">SPEED (%1$s):</string>
    <string name="pace_title">PACE (min/%1$s):</string>
    <string name="distance_title">DISTANCE:</string>
    <string name="time_title">TIME:</string>
    <string name="text_avg">Avg:</string>
    <string name="text_cur">Cur:</string>
    <string name="text_top">Top:</string>
    <string name="text_low">Low:</string>
    <string name="splash_screen_text1"><![CDATA[<html><b>CyberFit:</b> video-based\ntraining program</html>]]></string>
    <string name="splash_screen_text2">by CyberWalkAbout.com</string>
    <string name="photo_chooser_dialog_title">Select or take a new Picture</string>
    <string name="goals_filter_title">Filter exercises based on your interests:</string>
    <string name="program_details_should_be_subscribed_notice">You should be subscribed at least to one program</string>
    <string name="program_details_exercise_notice">You should be subscribed to a program to start exercise</string>
    <string name="delete_record_confirmation_notice">Delete this record?</string>
    <string name="share_exercises_notice">Do you want to share your exercises?</string>
    <string name="exercise_notice">When exercising please make sure you maintain the correct form as even small differences can trigger different muscle groups. Please watch instructional video.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="user">You</string>
    <string name="user_not_finished_any_exercises_yet">%1$s not finished any exercises yet.</string>
    <string name="user_not_finished_any_exercises_today">%1$s did not finish any exercises today.</string>
    <string name="exercise_history">Exercise log</string>
    <string name="training_programs">Fitness programs</string>
    <plurals name="exercises">
        <item quantity="one">exercise</item>
        <item quantity="other">exercises</item>
    </plurals>
    <string name="info">More info</string>
</resources>