<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/enter_time_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="20dp"
    android:paddingLeft="@dimen/default_screen_side_padding"
    android:paddingRight="@dimen/default_screen_side_padding"
    android:paddingTop="20dp"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_weight="50"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_enter_time_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/secondary_text_light"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_empty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/tertiary_text_light" />

    </LinearLayout>

    <Button
        android:id="@+id/enter_time_btn"
        style="@style/DropDownButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_weight="50"
        android:gravity="center"
        android:text="@string/time_initial_value"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!--android:textColor="?android:attr/textColorHint"-->
</LinearLayout>