<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start">

    <View
        android:id="@+id/shadow"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="@drawable/navigation_drawer_shadow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@id/shadow"
        android:background="@color/navigation_item_regular_color"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="vertical">

            <include layout="@layout/navigation_header" />

            <LinearLayout
                android:id="@+id/user_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View style="@style/NavigationDivider" />

                <Button
                    android:id="@id/exercises"
                    style="@style/NavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_tab_exercise"
                    android:text="@string/exercises" />

                <View style="@style/NavigationDivider" />

                <Button
                    android:id="@id/exercise_history"
                    style="@style/NavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_tab_programs"
                    android:text="@string/exercise_history" />

                <View style="@style/NavigationDivider" />

                <Button
                    android:id="@id/training_programs"
                    style="@style/NavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_tab_programs"
                    android:text="@string/training_programs" />


                <!--<View style="@style/NavigationDivider" />

                <Button
                    android:id="@id/schedule"
                    style="@style/UserNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule" />

                <View style="@style/NavigationDivider" />

                <Button
                    android:id="@id/photo_comparison"
                    style="@style/UserNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_comparison" />

                <View style="@style/NavigationDivider" />

                <Button
                    android:id="@id/measurements"
                    style="@style/UserNavigationButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/measurements" />-->

            </LinearLayout>

            <!-- Hiding PEOPLE option for now as interaction is terrible -->
            <!--<View style="@style/NavigationDivider" />-->

            <!--<Button-->
            <!--android:id="@id/people"-->
            <!--style="@style/NavigationButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:drawableLeft="@drawable/ic_people"-->
            <!--android:text="@string/people" />-->


            <!--<View style="@style/NavigationDivider"/>-->

            <!--<Button-->
            <!--android:id="@id/favorite_exercises"-->
            <!--style="@style/UserNavigationButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/favorite_exercises"/>-->

            <View style="@style/NavigationDivider" />

            <Button
                android:id="@id/info"
                style="@style/NavigationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_tab_settings"
                android:text="@string/info" />

            <View style="@style/NavigationDivider" />

            <!--<Button-->
            <!--android:id="@id/share"-->
            <!--style="@style/UserNavigationButton"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/share"/>-->

            <!--<View style="@style/NavigationDivider"/>-->

        </LinearLayout>

    </ScrollView>
</RelativeLayout>