<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/map_current_statistics"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#BBffffff"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <!--android:background="@android:drawable/screen_background_light_transparent"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:id="@+id/speed_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left">

            <TextView
                android:id="@+id/speed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/speed_title"
                android:text="@string/abbr_not_available"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speed_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/speed_value"
                android:layout_marginTop="2dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/speed_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/speed_max"
                android:layout_marginTop="2dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pace_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/pace_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pace"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/pace_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pace_title"
                android:text="@string/abbr_not_available"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pace_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/pace_value"
                android:layout_marginTop="2dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/pace_avg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pace_max"
                android:layout_marginTop="2dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/altitude_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right">

            <TextView
                android:id="@+id/altitude_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/altitude_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/altitude_title"
                android:text="@string/abbr_not_available"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/altitude_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/altitude_value"
                android:layout_marginTop="2dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/altitude_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/altitude_max"
                android:layout_marginTop="2dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="11sp" />

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/distance"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="Time: 00:00:00"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="?android:attr/textColorPrimary" />

    </LinearLayout>

</LinearLayout>